--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "next": "15.3.4",
     "react": "^19.0.0",
