--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "form-data": "^4.0.4",
+    "formidable": "^3.5.4",
     "next": "^15.3.5",
     "node-fetch": "^2.7.0",
     "react": "^19.1.0",
