--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "form-data": "^4.0.4",
     "formidable": "^3.5.4",
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "redux-saga": "^1.3.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.22.2"
   },
